manifest-ops/prod/upvy-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upvy-backend-prod
  labels:
    app: upvy-backend-prod
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: upvy-backend-prod
  template:
    metadata:
      labels:
        app: upvy-backend-prod
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      nodeSelector:
        node-pool: default
      serviceAccountName: otel-collector
      securityContext:
        runAsUser: 2000
        runAsNonRoot: true
        fsGroup: 2000
      containers:
        - name: upvy-backend-prod
          image: upvy/upvy-backend:da564b3315363955b4eeab14d69c50136a0adfb4
          volumeMounts:
            - name: otel-agent
              mountPath: /otel
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 700m
              memory: 1Gi
          securityContext:
            runAsUser: 2000
            runAsNonRoot: true
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.98.0
          args:
            - "--config=/etc/otel/config.yaml"
          ports:
            - containerPort: 4317
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: otel-config
              mountPath: /etc/otel
      volumes:
        - name: otel-agent
          emptyDir: {}
        - name: otel-config
          configMap:
            name: upvy-otel-collector-config
