manifest-ops/prod/upvy-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upvy-backend-prod-svc
spec:
  selector:
    app: upvy-backend-prod
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
